# oftp

./: CMakeLists.txt  README.md
CI/: Jenkinsfile
cmake/: GetVersionFromGit.cmake  build_type_selector.cmake
config/: config.h.in
doc/draw/: .$E-DB.drawio.bkp  .$总架构.drawio.bkp  E-DB.drawio  总架构.drawio
doc/protocol/: RFC959.md  架构设计.md
doc/test/: test.md
include/: common.h
include/log/: log.h
include/mem/: mem.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/dtp/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/ddm/: CMakeLists.txt
src/lib/log/: CMakeLists.txt  log.cpp  log.h
src/lib/mem/: CMakeLists.txt  mem.cpp  mem.h
src/lib/net/: CMakeLists.txt
src/protocol/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp
src/sys/: CMakeLists.txt
test/: CMakeLists.txt  test_ft_hello.cpp  test_ut_hello.cpp  test_ut_log.cpp
tools/: CMakeLists.txt  main.cpp
